Solving styling issue where "Use my location" button expands on smaller screens

--- a/src/applications/representative/sass/representative-app.scss
+++ b/src/applications/representative/sass/representative-app.scss
@@ -50,6 +50,7 @@
           background-image: url("/img/location-arrow-solid.svg");
           background-repeat: no-repeat;
           background-color: transparent;
+          max-width: 9em;
         }
 
         .finding-your-location-loading {
